src/objects/Sample_Custom_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CheckboxSample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckboxSample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Only_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Only External ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Only_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Only Unique</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ph_Number__c</fullName>
        <label>Ph Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reqd_And_Unique__c</fullName>
        <label>Reqd And Unique</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reqd_External_and_Unique__c</fullName>
        <externalId>true</externalId>
        <label>Reqd External and Unique</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reqd_Field__c</fullName>
        <label>Reqd Field</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reqd_and_External__c</fullName>
        <externalId>true</externalId>
        <label>Reqd and External</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Text_Field_Name__c</fullName>
        <label>Text Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_and_External__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique and External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sample Custom Setting</label>
</CustomObject>